#SPLUNK-121, fixing the long titles issue, added an overflow: hidden; property to the H1 style. Now the long titles cannot get out of the main container. Tested under Chrome and Firefox.
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@910 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -88,6 +88,7 @@ h1 {
     font-size: 160%;
     padding: 5px 0;
     line-height: 110%;
+    overflow: hidden;
 }
 
 h2 {
